# AHA-Designer

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web-ui/: package.json
apps/web-ui/src/: App.tsx  i18n.tsx  index.css
apps/web-ui/src/canvas/: CanvasPane.tsx  ContextMenu.tsx
apps/web-ui/src/canvas/nodes/: HardwareNode.tsx
apps/web-ui/src/panels/: LeftPanel.tsx  RightPanel.tsx  aiService.ts
apps/web-ui/src/store/: useGraphStore.ts
simulator/python-runner/: main.py
tests/: package.json
tests/e2e/: workflow.spec.ts
workflows/: ci.yml
