[package]
name = "aha-desktop"
version = "0.1.0"
description = "AHA Designer - Desktop Shell"
authors = ["AHA Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
